# ertsi-model

./: .gitignore  README.md  data.dvc  dvc.yaml  explore.ipynb  main.py  params.yml  pyproject.toml  split.py  sync.py
.dvc/: config
_old1/evaluation_comparison/convnext_base/: metrics.json
_old1/evaluation_complex/: metrics.json
_old1/evaluation_simple/: metrics.json
_old1/lightning_logs/version_0/: events.out.tfevents.1749754550.horus.16560.0  hparams.yaml
evaluation_comparison/comparison/: all_backbones_metrics.json
evaluation_comparison/densenet169/: metrics.json
evaluation_comparison/efficientnet_b4/: metrics.json
evaluation_comparison/resnet50_places365/: metrics.json
evaluation_exp6/: metrics.json
evaluation_exp7/: metrics.json
evaluation_expResolution/: metrics.json
evaluation_only-real_simple/: metrics.json
evaluation_real/: metrics.json
src/: backbone_models.py  complex_non_pre_model.py  complex_train.py  compute-mean-std.py  dataset.py  dataset_features.py  evaluate.py  evaluate_dinov2.py  evaluate_features.py  evaluate_flex.py  exV1-train.py  exV2-train.py  exV3-train.py  gradcam.py  improved_evaluate.py  improved_model.py  improved_train.py  latent_vis.py  latent_vis_2.py  load_model.py  model.py  model_features.py  model_flex.py  model_real.py  overfit_test.py  prepare.py  seed.py  simple_eval.py  simple_model.py  simple_train.py  test.py  train.py  train_features.py  train_flex.py  train_real.py  train_real_only.py  train_synth_only.py
