[project]
name = "ertsi-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.13, >=3.11"
dependencies = [
    "grad-cam>=1.5.5",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "webdavclient>=1.0.8",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
