[project]
name = "ertsi-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grad-cam>=1.5.5",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "open-clip-torch>=2.32.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "segment-anything>=1.0",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.4",
    "webdavclient3>=3.14.6",
]
